# funding-service-design-account-store

./: .env.development  .flaskenv  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  dockerfile  invoke.yaml  manifest-dev.yaml  manifest-test.yaml  manifest.yaml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tasks.py  wsgi.py
.github/workflows/: bump-tag.yml  codeql-analysis.yml  copilot.yml  copilot_deploy.yml  deploy.yml  environment.yml  manual-dev-deploy.yaml  package.yml  tag-to-release.yml  tag-to-zip.yml  test-secret.yml
config/: __init__.py
config/envs/: default.py  dev.py  development.py  production.py  test.py  unit_test.py
copilot/backend/: manifest.yml
copilot/fsd-account-store/: manifest.yml
copilot/fsd-account-store/addons/: fsd-account-store-cluster.yml
core/: account.py  app.py  dumb_data_store.py
core/data_operations/: account_data.py
core/db/: db_connection.py
db/: __init__.py
db/migrations/: .current-alembic-head  env.py  script.py.mako
db/migrations/versions/: 0dc6f757f011_.py  13d601bfaee1_.py  240995c9342b_.py  26906e63500c_.py  6f39a36cd3fa_.py  c28cf5398424_.py  d197951abf53_.py  (+4 more)
db/models/: account.py  applications.py  role.py
db/schemas/: account.py  role.py
healthcheck/: __init__.py
openapi/: api.yml
reqs/: requirements-dev.in  requirements.in
scripts/: migration-task-script.py  remove_duplicate_accounts.py
tests/: conftest.py  helpers.py  test_account.py  test_accounts.py  test_healthcheck.py  test_roles.py
