[project]
name = "funding-service-design-account-store"
version = "0.1.1"
description = "The funding service design account store for the DLUHC."
authors = ["Version One", "HM Government, Department of Levelling Up, Housing and Communities"]
license = "MIT License"

requires-python = ">=3.10, <3.11"
dependencies = [
    "alembic-utils==0.8.3",
    "connexion[flask,swagger-ui,uvicorn]>=3.1.0",
    "email-validator>=2.2.0",
    "flask-marshmallow==1.2.1",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask==3.0.3",
    "funding-service-design-utils==5.1.*",
    "greenlet>=3.1.1",
    "marshmallow-enum==1.5.1",
    "marshmallow-sqlalchemy==1.0.0",
    "openapi-spec-validator>=0.7.1",
    "prance>=23.6.21.0",
    "psycopg2-binary==2.9.9",
    "requests>=2.32.3",
    "shortuuid>=1.0.13",
    "sqlalchemy-utils==0.41.2",
    "sqlalchemy[mypy]>=2.0.31",
    "swagger-ui-bundle==1.1.0",
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
count = true
extend-ignore = ["E203", "E704"]

[tool.isort]
profile = "black"
force_single_line = "true"

[tool.uv]

[dependency-groups]
dev = [
    "asserts>=0.13.1",
    "black>=24.4.2",
    "colored>=2.2.4",
    "debugpy>=1.8.2",
    "deepdiff>=7.0.1",
    "flake8-pyproject>=1.2.3",
    "invoke>=2.2.0",
    "pip-tools>=6.13.0",
    "pre-commit~=4.0.0",
    "pytest-env>=1.1.3",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.1",
]
